# Chaotic-ERP

./: MANIFEST.in  README.md  package.json  pyproject.toml  setup.py
chaotic_erpnext/: api.py  hooks.py  modules.txt
chaotic_erpnext/chaotic/page/chaotic_benchmarks/: chaotic_benchmarks.html  chaotic_benchmarks.js  chaotic_benchmarks.json
chaotic_erpnext/chaotic/workspace/auth_benchmarks/: auth_benchmarks.json
chaotic_erpnext/fixtures/: custom_field.json
chaotic_erpnext/page/chaotic_benchmarks/: chaotic_benchmarks.js  chaotic_benchmarks.json
chaotic_erpnext/public/: build.json
chaotic_erpnext/public/js/: chaotic_login.bundle.js  chaotic_login.js  chaotic_universal_v1.js
chaotic_erpnext/www/: chaotic-auth.html  chaotic-settings.html  chaotic-signup.html  login.html
