[project]
name = "chaotic_erpnext"
version = "0.0.1"
description = "zkSNARK + TPM Hardware Attestation for ERPNext"
authors = [
    { name = "Chaotic Team", email = "admin@example.com" }
]
requires-python = ">=3.10"
dependencies = [
    "requests"
]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.app]
title = "Chaotic Hardware Authentication"
publisher = "Chaotic Team"
description = "zkSNARK + TPM Hardware Attestation for ERPNext"
icon = "octicon octicon-shield"
color = "grey"
email = "admin@example.com"
repo_url = "https://github.com/brandon99-hub/Chaotic-ERP"
